bk_ida/gccida/c0/mention_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mention_regs/src/cse.c:1676:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+DCh] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mention_regs/src/cse.c:1727:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mention_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mention_regs/src/cse.c:1728:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v31 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mention_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mention_regs/src/cse.c:1743:2: error: expected expression
 struct cse_reg_info = cached_cse_reg_info; 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mention_regs/src/cse.c:1745:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( i_0); 
 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mention_regs/src/cse.c:1799:55: error: use of undeclared identifier 'machine_mode'
remove_invalid_subreg_refs( i_1, *( _DWORD *)&x[1], ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mention_regs/src/cse.c:1799:70: error: expected expression
remove_invalid_subreg_refs( i_1, *( _DWORD *)&x[1], ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                                                                     ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mention_regs/src/obj/cse.o] Error 1
